# xwdocs

./: .gitignore  .justfile  Cargo.toml  README copy.md  README.md  Why?.md
.github/prompts/: general.prompt.md
docs/: multiple_base_urls.md
src/: app.rs  lib.rs  main.rs  scraper.rs
src/cli/: handler.rs  mod.rs  scraper_cmd.rs
src/cli_backup/: handler.rs  mod.rs  mod.rs.bak  scraper_cmd.rs
src/core/: config.rs  doc.rs  error.rs  filter_registry.rs  filter_stack.rs  index_entry.rs  instrumentable.rs  manifest.rs  mod.rs  page_db.rs  parser.rs  request.rs  requester.rs  response.rs  subscriber.rs  types.rs  url.rs
src/core/filters/: base_clean_html.rs  filter_base.rs  html_cleaner.rs  mod.rs  url_normalizer.rs
src/core/filters/html/: images.rs  mod.rs
src/core/scraper/: base.rs  filter.rs  fix_redirections.rs  mod.rs  rate_limiter.rs  url_scraper.rs
src/docs/: documentation.rs  mod.rs  registry.rs
src/docs/babel/: clean.rs  entries.rs  mod.rs  scraper.rs  tests.rs
src/docs/css/: mod.rs  scraper.rs
src/docs/css/filters/: mod.rs
src/docs/html/: clean.rs  entries.rs  mod.rs  scraper.rs
src/docs/html/filters/: entries.rs  mod.rs
src/docs/javascript/: clean.rs  entries.rs  mod.rs  scraper.rs
src/docs/javascript/filters/: clean_html.rs  entries.rs  mod.rs
src/docs/rust/: mod.rs  scraper.rs
src/docs/rust/filters/: mod.rs
src/docs/typescript/: mod.rs  scraper.rs
src/docs/typescript/filters/: mod.rs
src/storage/: file_store.rs  mod.rs  store.rs
src/web/: handlers.rs  mod.rs  routes.rs  server.rs  static_files.rs
test_docs/babel_enhanced/: cleaned.html  entries.txt
test_docs/babel_image_test/: processed_babel.html
test_docs/babel_scraper_test/: _entries.txt  _original.html  _processed.html  babel-cli_entries.txt  babel-cli_original.html  babel-cli_processed.html  options_entries.txt  options_original.html  options_processed.html  plugins_entries.txt  plugins_original.html  plugins_processed.html
test_docs/babel_test_data/: parser_page.html  usage_page.html
test_docs/images_test/: data_url_test.html  processed.html  relative_url_test.html
test_docs/images_test/assets/: test.ppm
