[package]
name = "xwdoc"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation of DevDocs API Documentation Browser (xwdoc)"
readme = "README.md"
license = "MIT"

[dependencies]
# HTTP client for the scraper
reqwest = { version = "0.11", features = ["json", "blocking"] }

# HTML parsing
html5ever = "0.26"
markup5ever_rcdom = "0.2.0"
markup5ever_arcdom = "0.1.1"
kuchiki = "0.8"

# Web server for the app
axum = "0.6"
tokio = { version = "1", features = ["full"] }

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Command line interface
clap = { version = "4.3", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# File system operations
walkdir = "2.3"

# Compression
flate2 = "1.0"

# Regular expressions
regex = "1.9"
scraper = "0.23.1"
url = "2.4"
lazy_static = "1.4.0"
base64 = "0.22.1"

# Terminal output formatting
termcolor = "1.2"
term_size = "0.3"
atty = "0.2"
textwrap = "0.16"
chrono = "0.4"

# Async operations
futures = "0.3"

# Image processing
image = "0.23.14" # Further downgraded from 0.24.8

# Async trait support
async-trait = "0.1"

# Error handling (additional, for eyre)
eyre = "0.6"

# HTML escaping
html-escape = "0.2"

# Perfect Hashing Function for static maps (macros feature for phf_map!)
phf = { version = "0.11", features = ["macros"] }

# Futures utilities
futures-util = "0.3"

# ICU provider (further downgraded for Rust 1.75 compatibility)
icu_provider = "=0.6.0" # Downgraded from =1.4.0

# idna_adapter (pinned for Rust 1.75 compatibility)
idna_adapter = "=1.1.0" # Corrected version from 1.1.1 to 1.1.0

# native-tls (pinned for Rust 1.75 compatibility)
native-tls = "=0.2.11"

# half (pinned for Rust 1.75 compatibility, likely for image crate)
half = "=2.3.1"

# bitstream-io = "=2.1.1" # Removed direct pin, let image = "0.23.14" resolve it

# zerofrom (pinned for Rust 1.75 compatibility)
zerofrom = "=0.1.5"

# litemap, zerovec, icu_normalizer_data pins removed to let icu_provider resolve them.
# If this fails, it implies icu_provider = "=1.4.0" itself has issues with Rust 1.75
# or its own dependency specifications for that version are problematic.

# 日期时间处理
# chrono = "0.4" # Removed duplicate entry

[dev-dependencies]
mockito = "1.0"
test-case = "3.1"
tempfile = "3.8"